--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
 			background-color: #86ecfc;
 		}
 
+		#suggestions a{
+			text-decoration: none;
+			color: black;
+		}
+
 		.elem-mid {
 			position: relative;
 			top: 50%;
